<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar_login"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:theme="@style/DialogTheme"
            android:indeterminate="true"
            android:scaleY="2" />

        <LinearLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/welcome"
                android:fontFamily="@font/normal"
                android:includeFontPadding="false"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/there_are_lots_of_place_to_eat"
                android:textSize="20sp"
                android:fontFamily="@font/normal"
                android:includeFontPadding="false"
                android:paddingTop="5dp"
                android:textStyle="bold" />

            <!-- Email Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:fontFamily="@font/normal"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:fontFamily="@font/normal"
                    android:includeFontPadding="false"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:fontFamily="@font/normal"
                android:includeFontPadding="false"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />


            <Button
                android:id="@+id/button_login"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/fill_button_border"
                android:includeFontPadding="false"
                android:fontFamily="@font/normal"
                android:text="@string/login"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:text="@string/or_sign_in_with" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/normal"
                android:includeFontPadding="false"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/google_layout"

                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:src="@drawable/ic_facebook" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/facebook_layout"


                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="20dp"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:src="@drawable/ic_google" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    android:fontFamily="@font/normal"
                    android:includeFontPadding="false"
                    android:text="@string/don_t_have_account" />

                <TextView
                    android:id="@+id/sign_up_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/normal"
                    android:includeFontPadding="false"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/sign_up"
                    android:textColor="#0d73d9" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>