<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar_sign_up"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            android:indeterminateOnly="true"
            android:scaleY="2"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/header_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/fascinating"
                    android:fontFamily="@font/normal"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="25sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/cross"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.2"
                android:padding="3dp"
                android:src="@drawable/ic_close"
                android:tint="@color/colorBlack" />

        </LinearLayout>

        <TextView
            android:id="@+id/header_sub_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:includeFontPadding="false"
            android:paddingLeft="30dp"
            android:paddingStart="30dp"
            android:text="@string/create_a_new_account"
            android:textColor="@color/colorLightGrey"
            android:fontFamily="@font/normal"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/name_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/rounded_sign_up_view"
                android:orientation="horizontal"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/name_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:maxHeight="35dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_person"
                    android:tint="#b8b8b8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="Full Name"
                        android:fontFamily="@font/normal"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/email_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_sign_up_view"
                android:orientation="horizontal"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/email_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:maxHeight="35dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_email"
                    android:tint="#b8b8b8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/email"
                        android:fontFamily="@font/normal"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/phone_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_sign_up_view"
                android:orientation="horizontal"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/phone_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:maxHeight="35dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_phone"
                    android:tint="#b8b8b8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/phone_number"
                        android:fontFamily="@font/normal"
                        android:includeFontPadding="false"
                        android:inputType="phone"
                        android:padding="10dp"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_sign_up_view"
                android:orientation="horizontal"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/password_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:maxHeight="35dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_key"
                    android:tint="#b8b8b8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:fontFamily="@font/normal"
                        android:includeFontPadding="false"
                        android:padding="10dp"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/confirm_password_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_sign_up_view"
                android:orientation="horizontal"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/confirm_password_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:maxHeight="35dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_key"
                    android:tint="#b8b8b8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:fontFamily="@font/normal"
                        android:includeFontPadding="false"
                        android:padding="10dp"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/sign_up"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/fill_button_border"
                android:includeFontPadding="false"
                android:fontFamily="@font/normal"
                android:text="@string/sign_up"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/terms_and_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:fontFamily="@font/normal"
                android:includeFontPadding="false"
                android:text="@string/by_clicking_sign_up_you_agree_with_our_terms_conditions"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
